--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,11 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-    
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Open index.html",
-            "file": "/workspaces/Retro-Quick-Doodle/index.html"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Open Retro Paint in Browser",
+      "url": "http://localhost:5500/index.html"
+    }
+  ]
 }
